; ModuleID = '/home/carl/AnghaBench/git/extr_refs.c_for_each_fullref_in.c'
source_filename = "/home/carl/AnghaBench/git/extr_refs.c_for_each_fullref_in.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DO_FOR_EACH_INCLUDE_BROKEN = common dso_local global i32 0, align 4
@the_repository = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @for_each_fullref_in(i8* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  store i32 0, i32* %9, align 4
  %10 = load i32, i32* %8, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %4
  %13 = load i32, i32* @DO_FOR_EACH_INCLUDE_BROKEN, align 4
  store i32 %13, i32* %9, align 4
  br label %14

14:                                               ; preds = %12, %4
  %15 = load i32, i32* @the_repository, align 4
  %16 = call i32 @get_main_ref_store(i32 %15)
  %17 = load i8*, i8** %5, align 8
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* %9, align 4
  %20 = load i8*, i8** %7, align 8
  %21 = call i32 @do_for_each_ref(i32 %16, i8* %17, i32 %18, i32 0, i32 %19, i8* %20)
  ret i32 %21
}

declare dso_local i32 @do_for_each_ref(i32, i8*, i32, i32, i32, i8*) #1

declare dso_local i32 @get_main_ref_store(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
